# soil

./: .clang-tidy  .gitattributes  CMakeLists.txt  CMakePresets.json  COPYRIGHT.md  README.md  conanfile.py  iwyu.imp
.github/actions/setup-conan/: action.yml
.github/workflows/: ci.yml  sanitizers.yml  static-analysis.yml
assets/: CMakeLists.txt
ci/conan/: clang-asan-leak-undefined  msvc-asan
cmake/: clang-tidy.cmake  cppcheck.cmake  glslc.cmake  iwyu.cmake  project-options.cmake
conan/: dependencies
src/: CMakeLists.txt
src/cppext/: CMakeLists.txt
src/cppext/include/: cppext_cycled_buffer.hpp  cppext_cyclic_stack.hpp
src/cppext/test/: cppext_cyclic_stack.t.cpp
src/niku/: CMakeLists.txt
src/niku/include/: niku_application.hpp  niku_camera.hpp  niku_perspective_camera.hpp
src/niku/src/: niku_application.cpp  niku_mouse.cpp  niku_perspective_camera.cpp
src/soil/: CMakeLists.txt
src/soil/shaders/: bullet_debug_line.frag  bullet_debug_line.vert  terrain.frag  terrain.vert
src/soil/src/: application.cpp  application.hpp  bullet_adapter.cpp  bullet_adapter.hpp  bullet_debug_renderer.cpp  bullet_debug_renderer.hpp  free_camera_controller.cpp  free_camera_controller.hpp  heightmap.cpp  heightmap.hpp  mouse_controller.cpp  mouse_controller.hpp  noise.cpp  noise.hpp  perspective_camera.cpp  perspective_camera.hpp  physics_engine.cpp  physics_engine.hpp  soil.m.cpp  terrain.cpp  terrain.hpp  terrain_renderer.cpp  terrain_renderer.hpp
src/vkrndr/: CMakeLists.txt
src/vkrndr/include/: gltf_manager.hpp  vkrndr_camera.hpp  vkrndr_render_pass.hpp  vkrndr_scene.hpp  vulkan_buffer.hpp  vulkan_commands.hpp  vulkan_image.hpp  vulkan_memory.hpp  vulkan_pipeline.hpp  vulkan_queue.hpp  vulkan_renderer.hpp  vulkan_scene.hpp  vulkan_utility.hpp
src/vkrndr/src/: gltf_manager.cpp  imgui_render_layer.cpp  imgui_render_layer.hpp  vkrndr_render_pass.cpp  vulkan_buffer.cpp  vulkan_commands.cpp  vulkan_context.cpp  vulkan_device.cpp  vulkan_image.cpp  vulkan_memory.cpp  vulkan_pipeline.cpp  vulkan_queue.cpp  vulkan_renderer.cpp  vulkan_swap_chain.cpp  vulkan_swap_chain.hpp
